tests/fixtures/type_errors/builtin_gcd_type.airl
;; ERROR: type mismatch
;; gcd expects (Int, Int) not (String, Int)
(gcd "abc" 10)
